Rename CI workflow and update artifact name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
-name: CI
-
+name: CI Workflow
 on:
   push:
   pull_request:
@@ -9,10 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run build script
-        run: ./runme.sh
+      - run: ./runme.sh
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: result
+          name: build-artifact
           path: artifact_*.txt
